--- a/projects/ng-components/src/assets/styles/shell-layout.css
+++ b/projects/ng-components/src/assets/styles/shell-layout.css
@@ -1,5 +1,9 @@
 @layer components {
 
+  .app-logo {
+    @apply h-8 w-8;
+  }
+
   .shell-container {
     @apply antialiased font-sans bg-gray-100;
   }
